platform-dev/overlays/regression/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  revisionHistoryLimit: 2
  replicas: 2
  template:
    metadata:
      annotations:
        reloader.stakater.com/search: "true"
        configmap.reloader.stakater.com/reload: "regression-platform-cm, regression-deployment-cm, regression-platform-secret-configmap"
        vault.hashicorp.com/agent-pre-populate-only: "true"
        vault.hashicorp.com/agent-configmap: "regression-platform-secret-configmap"
        vault.hashicorp.com/agent-requests-cpu: "25m"
        vault.hashicorp.com/agent-limits-cpu: "50m"   
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "myapp"
    spec:
      imagePullSecrets:
      - name: dockerconfigjson-github-com
      containers:
        - name: vc-platform-web
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1024Mi"
          volumeMounts:
            - mountPath: "/opt/virtocommerce/platform/wwwroot/cms-content"
              name: cms-content-data
            - mountPath: "/opt/virtocommerce/platform/modules"
              name: modules-data
            - mountPath: "/opt/virtocommerce/platform/shared"
              name: shared   
      volumes:
      - name: shared
        persistentVolumeClaim:
          claimName: shared-volume
      - name: cms-content-data
        persistentVolumeClaim:
          claimName: cms-content-volume
      - name: modules-data
        emptyDir: {}  
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
